@@ -43,6 +43,13 @@ a-mused pointed out that samples/tk.perl wasn't stopping its alarm
 counters when it ought to.  This turned out to be a problem with
 POE::Kernel's delay() method not clearing timed events.  Fixed!
 
+Turned the idle kernel check into a macro, and used it not only from
+POE::Kernel's run() method but also from the Tk and Event callbacks.
+Before this, IDLE would never be posted when using Tk or Event.
+
+Enhanced TestSetup (used privately by the t/*.t tests) to skip entire
+test files when given 0 for the number of tests.
+
 
 0.1004 2000.05.21
 -----------------
